[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelcost-sdk"
version = "0.3.0"
description = "Python SDK for the ModelCost API — track, govern, and optimize AI model spending."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ModelCost", email = "support@modelcost.ai" },
]
keywords = ["ai", "llm", "cost", "tracking", "budget", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-timeout",
    "ruff",
    "mypy",
    "respx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modelcost"]

[project.urls]
Homepage = "https://modelcost.ai"
Documentation = "https://modelcost.ai/docs"

[project.scripts]
test = "pytest:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
timeout = 30

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["modelcost"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = false
